--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -6,12 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OreoTaste</title>
+    <style>
+        input:focus{
+            background: skyblue;
+        }
+    </style>
 </head>
 <body>
     <p>Welcome to OreoTaste</p>
     <form action="/new" method="post">
-        <input type="text" name="name" required><br>
-        <input type="email" name="email" required>
+        <input type="text" name="name" placeholder="username" required><br>
+        <input type="email" name="email" placeholder="email" required><br>
+        <input type="password" name="password" placeholder="password" required><br>
         <button>Register</button>
     </form>
 </body>
