(2)Working on Spring + JPA + Thymeleaf + H2DBMS

--- a/src/main/resources/static/asset/css/styles.css
+++ b/src/main/resources/static/asset/css/styles.css
@@ -1,6 +1,10 @@
+/* import component */
 @import "component/index.css";
 @import "component/register.css";
 @import "component/icon.css";
+
+/* import page css */
+@import "pages/main.css";
 
 * {
 box-sizing: border-box;
