--- a/src/main/resources/templates/member/registerForm.html
+++ b/src/main/resources/templates/member/registerForm.html
@@ -51,7 +51,7 @@
                                     </div>
                                 </span>
                                 <span>
-                                    <input type="password" name="password" id="password-2" placeholder="비밀번호 확인" required/>
+                                    <input type="password" id="password-2" placeholder="비밀번호 확인" required/>
                                 </span>
                             </label>
                         </div>
