--- a/src/main/webapp/static/asset/css/pages/main.css
+++ b/src/main/webapp/static/asset/css/pages/main.css
@@ -182,6 +182,35 @@ nav > div > div:nth-child(2n) {
 .main-category__items-col {
     width: 55%;
 }
+.main-category__items_col__products {
+    height: 50%;
+    width: 33.33%;
+    display: inline-block;
+}
+.main-category__items_col__products .pic,
+.main-category__items_col__products .name,
+.main-category__items_col__products .price {
+    font-size: 1.3em;
+    padding: 0 15px;
+}
+.main-category__items_col__products .pic{
+    padding: 15px;
+    height: 70%;
+    overflow: hidden:
+}
+.main-category__items_col__products .pic img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.main-category__items_col__products .price {
+    font-weight: 600;
+}
+.main-category__items_col__products .price::after {
+    content: "원";
+    font-weight: 500;
+    font-size: 0.75em;
+}
 footer {
     height:370px;
     left: 0;
