--- a/src/main/webapp/WEB-INF/templates/main.html
+++ b/src/main/webapp/WEB-INF/templates/main.html
@@ -67,14 +67,23 @@
                     <div class="title"></div>
                     바로가기 >
                 </div>
-                <div class="main-category__center-col">2</div>
+                <div class="main-category__center-col">
+                    <div>
+                        <img th:src="@{/static/asset/img/wallpaper/wallpaper1.jpg}"/>
+                    </div>
+                </div>
                 <div class="main-category__items-col">
                     <div class="main-category__items_col__products" th:each="product : ${products}">
+                        <a th:href="'/product/' + ${product.id}">
                         <div class="pic">
                             <img th:attr="src=${product.thumbnail}, title=@{thumbnail},alt=@{thumbnail}"/>
                         </div>
                         <div class="name" th:text="${product.name}"></div>
-                        <div class="price" th:text="${product.price}"></div>
+                        <div class="price">
+                            <span class="js-price" th:text="${product.price}">가격</span>
+                            <img class="price__rocket" th:if="${product.is_rocket eq 'on'}" th:src="@{/static/asset/img/rocket_logo.png}"/>
+                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
