--- a/src/main/webapp/WEB-INF/templates/main.html
+++ b/src/main/webapp/WEB-INF/templates/main.html
@@ -6,7 +6,10 @@
     <link href="../static/asset/css/styles.css" rel="stylesheet" th:href="@{/static/asset/css/styles.css}"/>
 </head>
 <body>
-    <input type="hidden" name="email" th:if="${session.containsKey('email')}" th:value="${session.email}"/>
+    <!--
+    <input id="idStorage" type="hidden" name="id" th:if="${session.containsKey('id')}" th:value="${session.id}"/>
+    <input id="emailStorage" type="hidden" name="email" th:if="${session.containsKey('email')}" th:value="${session.email}"/>
+    -->
     <div th:replace="fragments/searchHeader :: searchHeader" />
     <div class="main-wrapper">
         <div class="main-banner">
