--- a/src/main/webapp/static/asset/css/pages/product/detail.css
+++ b/src/main/webapp/static/asset/css/pages/product/detail.css
@@ -8,12 +8,15 @@
     overflow: hidden;
 }
 .product-detail-header__pic div{
-    width: 100%;
-    height: 100%;
+    margin-left: auto;
+    width: 400px;
+    height: 400px;
     overflow: hidden;
 }
 .product-detail-header__pic div img{
-    object-fit: cover;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 .product-detail-header__infos {
     width: 50%;
@@ -24,16 +27,16 @@
 }
 .product-detail-header__infos__name {
     border-bottom: 1px solid rgba(0,0,0,.3);
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     font-weight: 600;
     word-break: break-all;
-    padding: 1%;
+    padding: 1% 0;
 }
 .product-detail-header__infos__price {
     border-bottom: 1px solid rgba(0,0,0,.3);
 }
 .product-detail-header__infos__price .js-price{
-    font-size: 2rem;
+    font-size: 1.2rem;
     font-weight: 600;
     color: var(--red);
     display: inline-block;
@@ -130,4 +133,36 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+.product-detail-header__pic .magnified-product {
+    position: absolute;
+    top: 10rem;
+    left: 50%;
+}
+.product-detail-header__pic .magnified-product img{
+    width: 800px;
+    height: 800px;
+}
+.product-detail-body {
+    height: 500px;
+    overflow: hidden;
+}
+.product-detail-content {
+    position: relative;
+}
+.product-detail-content__spreader {
+    display: block;
+    background: white;
+    border: 1px solid var(--blue);
+    color: var(--blue);
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    margin: 0 auto;
+    top: 400px;
+    position: absolute;
+    left: calc(50% - 100px);
+    font-weight: 600;
+    cursor: pointer;
 }
