Working on Shopping Cart

--- a/src/main/webapp/WEB-INF/templates/fragments/searchHeader.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/searchHeader.html
@@ -21,12 +21,12 @@
             <div class="non-category-bar">
                 <div class="non-category-bar__search-row">
                     <div class="search-row__logo">
-                        <div class="main-logo-btn" alt="logo"></div>
+                        <div class="main-logo-btn" alt="logo" onclick="location.href='/main'"></div>
                     </div>
                     <div class="search-row__search-bar"></div>
                     <div class="search-row__mypage">
                         <div><div class="my-coupang-icon"></div>마이쿠팡</div>
-                        <div><div class="my-coupang-title"></div>장바구니</div>
+                        <div><div class="my-coupang-title" id="cart" onclick="location.href='/cart/show'"></div><label for="cart">장바구니</label></div>
                     </div>
                 </div>
                 <div class="non-category-bar__detail-row">
