--- a/src/main/webapp/WEB-INF/templates/fragments/simpleHeader.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/simpleHeader.html
@@ -3,7 +3,7 @@
 <div th:fragment="simpleHeader">
     <div class="main-wrapper">
         <div class="simpleHeader">
-            <div class="main-logo-btn" alt="logo"></div>
+            <div class="main-logo-btn" alt="logo" onclick="location.href='/main'"></div>
         </div>
     </div>
 </div>
