--- a/src/main/webapp/WEB-INF/templates/product/detail.html
+++ b/src/main/webapp/WEB-INF/templates/product/detail.html
@@ -36,7 +36,7 @@
                             <div class="js-quantity-down">-</div>
                         </div>
                     </div>
-                        <button class="">장바구니 담기</button>
+                        <button id="shoppingCart">장바구니 담기</button>
                         <button class="directOrder">바로 구매 > </button>
                 </div>
                 <li class="product-detail-header__product-id" th:text="'쿠팡상품번호: '+${product.id}" th:value="${product.id}"></li>
@@ -60,7 +60,6 @@
     <div th:replace="fragments/footer :: footer" />
 
     <script src="../static/asset/js/detail.js"></script>
-    <script src="../static/asset/js/searchHeader.js"></script>
 </body>
 
 </html>
