--- a/src/main/webapp/WEB-INF/templates/main.html
+++ b/src/main/webapp/WEB-INF/templates/main.html
@@ -40,7 +40,7 @@
                     <div class="main-category__items_col__products" th:each="product : ${products}">
                         <a th:href="'/product/' + ${product.id}">
                         <div class="pic">
-                            <img th:attr="src=${product.thumbnail}, title=@{thumbnail},alt=@{thumbnail}"/>
+                            <img th:attr="src=${product.thumbnail}, alt=@{thumbnail}"/>
                         </div>
                         <div class="name" th:text="${product.name}"></div>
                         <div class="price">
@@ -59,6 +59,5 @@
 
     <div th:replace="fragments/footer :: footer" />
     <script src="../static/asset/js/main.js"></script>
-    <script src="../static/asset/js/searchHeader.js"></script>
 </body>
 </html>
